# folder_tree_generator

./: README.md  package.json
src/: index.html  main.js  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  tree_generator.rs
